--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,7 +250,7 @@
 		height: 100%;
 		top: 0;
 		left: 0;
-		opacity: 0.5;
+		opacity: 0;
 		position: absolute;
 		width: 100%;
 	}
@@ -261,7 +261,7 @@
 		top: 50%;
 		font-size: 15px;
 		text-align: left;
-		color: #fff;
+		color: #333;
 		text-shadow: none;
 		margin-top: -130px;	
 	}
@@ -816,6 +816,7 @@
 	}
 
 	.single-blog{
+
 		margin-top: 35px;
 		margin-bottom: 35px;
 	}
